# InterpRegression

./: Makefile.am  Makefile.in  configure  configure.ac
examples/: Makefile.am  Makefile.in  interpRegDyn1D4Points.c  interpRegDyn3D12Points.c  interpRegDyn3D6Points.c  interpRegDyn3D8Points.c  interpRegFix.c  lorenzoFix.c
interpReg/: Makefile.am  Makefile.in
interpReg/include/: ExtractData.h  InterpRegression.h  MatrixOperation.h
interpReg/src/: ExtractData.c  InterpRegression.c  MatrixOperation.c
